feat: adds search menus
