# domain/repo/repo_interface.go
@@ -10,6 +10,7 @@ type RepoInterface interface {
 	CreateMenu(ctx context.Context, menu *entity.Menu) error
 	FindMenu(ctx context.Context, menuID *string) (*entity.Menu, error)
 	SaveMenu(ctx context.Context, menu *entity.Menu) error
+	SearchMenus(ctx context.Context, searchMenu *entity.SearchMenus) ([]*entity.Menu, *string, error)
 
 	CreateItem(ctx context.Context, item *entity.Item) error
 	FindItem(ctx context.Context, menuID, itemID *string) (*entity.Item, error)
